--- a/src/app/modules/fournisseur/fournisseur.component.html
+++ b/src/app/modules/fournisseur/fournisseur.component.html
@@ -23,8 +23,8 @@
           <!-- Page Heading -->
           <div class="row  mb-4">
             <h5 class="col-md-6 mb-0 text-gray-800">
-              <i class="fas fa-fw fa-car"></i>
-              <span>Fournisseur</span>
+              <i class="fas fa-fw {{icon}}"></i>
+              <span> {{title}} </span>
             </h5>
   
             <div class="col-md-6">
@@ -33,14 +33,14 @@
           <div class="row mb-4 animated slideInUp">
             <div class="col-md-12">
               <div class="d-sm-flex align-items-center justify-content-start bg-white shadow-sm pt-2 pb-2 subMenu">
-                <a routerLink="/fournisseur/liste" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-bus-school"></i> Fournisseur
+                <a routerLink="/annuaire/liste" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-address-card"></i> Annuaire
                 </a>
-                <a routerLink="/fournisseur/groupe" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-route"></i> Groupe Fournisseur
+                <a routerLink="/annuaire/groupe" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-book-user"></i> Groupe Contact
                 </a>
-                <a routerLink="/fournisseur/type" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-user-tie"></i> Type Fournisseur
+                <a routerLink="/annuaire/type" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-address-book"></i> Type Contact
                 </a>
               </div>
             </div>
