--- a/src/app/modules/logistique/inventaire/inventaire.component.html
+++ b/src/app/modules/logistique/inventaire/inventaire.component.html
@@ -48,8 +48,8 @@
             </div>
         </div>
     </div>
-    <div class="row row-xs mg-0 pd-0 bg-light p-0">
-        <div class="col-lg-6 d-flex">
+    <div class="d-flex align-items-center mg-0 pd-0 bg-light p-0">
+        <div class="col-lg-6 d-flex align-items-center">
             <div>
                 <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
             <i class="fal fa-plus-circle tx-14" ></i>
