--- a/src/app/modules/transport/permi-type/edit/edit.component.html
+++ b/src/app/modules/transport/permi-type/edit/edit.component.html
@@ -10,7 +10,7 @@
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
                     <input type="text" class="form-control" required [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'libelle'), 'is-valid': isValid('libelle')}" name="libelle" required>
-                    <span class="custom-span">Type de contact</span>
+                    <span class="custom-span">Type de permis</span>
                     <div *ngIf="shouldShowRequiredError('libelle')" class="invalid-feedback">veillez saisir le libellé.</div>
                 </div>
             </div>
