--- a/src/app/modules/logistique/commande/commande.component.html
+++ b/src/app/modules/logistique/commande/commande.component.html
@@ -2,7 +2,7 @@
     <div class="sidebarlist" [class.sidebar_small]="selectedCommande">
         <div class="col-12 d-flex align-items-center">
             <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
-            <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
+            <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 my-1">
                 <i class="fal fa-plus-circle tx-14" ></i>
             </button>
         </div>
@@ -74,13 +74,13 @@
     </div>
     <div class="main-content scroll-11" [class.main-content_large]="selectedCommande">
         <ng-container *ngIf="selectedCommande">
-            <div class="d-flex border-bottom sticky-top bg-white">
+            <div class="d-flex border-bottom sticky-top bg-white align-items-center justify-content-between">
                 <button class="btn btn-sm btn-link" (click)="onSetSelected()">
                     <i class="fal fa-2x fa-arrow-circle-left"></i>
                 </button>
                 <span class="flex-1 tx-facebook tx-24">{{selectedCommande.materiel.libelle}}: {{selectedCommande.date_commande | date: 'dd/MM/yyyy'}}</span>
                 <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateAffectationForm();" class="btn btn-sm  btn-primary card-1 bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
-                  Ajouter <i class="fal fa-plus-square" ></i>
+                  <i class="fal fa-plus-square" ></i>
                 </button>
             </div>
             <div class="table-responsive">
