--- a/src/app/modules/transport/dossier-conducteur/dossier-conducteur.component.html
+++ b/src/app/modules/transport/dossier-conducteur/dossier-conducteur.component.html
@@ -1,49 +1,224 @@
-<div class="card card-2 card-accent-primary">
-    <div class="d-flex p-2  border-bottom">
-        <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2">
-    <i class="fal fa-plus-circle tx-14 rounded-circle" ></i>
-  </button>
-        <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
-    </div>
-    <div class="card-body p-0" [class.loading]="dataHelper.loading$ | async">
-        <div *ngIf="dataHelper.data$ | async as items">
-            <div class="row card-group p-2">
-                <ng-container *ngIf="items.length; else noItem">
-                    <div class="mb-2 col-12 col-sm-8 col-md-6 col-lg-4" *ngFor="let dossier of items;trackBy:  dataHelper.trackByFn">
-                        <div class="card card-1 mg-15">
-                            <img class="card-img" style="max-height: 200px;" src="./assets/img/10.jpg" alt="Bologna">
-                            <div class="card-body">
+<div class="grid-container">
+    <div class="sidebarlist" [class.sidebar_small]="selectedDossier">        
+        <div class="card card-2 card-accent-primary">
+            <div class="d-flex p-2  border-bottom">
+                <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
+            </div>
+            <div class="card-body p-0" [class.loading]="dataHelper.loading$ | async">
+                <div *ngIf="dataHelper.data$ | async as items">
+                    <ng-container *ngIf="items.length; else noItem">
+                        <div class="row card-group p-2">
+                            <div class="mb-2 col-12 col-sm-8 col-md-6 col-lg-4" *ngFor="let dossier of items;trackBy:  dataHelper.trackByFn">
+                                <div class="card card-1 mg-15">
+                                    <img class="card-img" style="max-height: 200px;" src="./assets/img/10.jpg" alt="Bologna">
+                                    <div class="card-body">
 
-                                <h3 class="card-title mb-0">{{dossier.conducteur.libelle | titlecase}}
-                                </h3>
-                                <p class="text-center mb-0">
-                                    <button class="btn  p-0 mx-2" [routerLink]="[ './', dossier.id]" [ngbTooltip]="'Details'" tooltipClass="my-tooltip-class">
-                              <i class="fal fa-search" size="lg" style="color: #99600b "></i>
-                          </button>
-                                    <button class="btn p-0 mx-2" (click)="onShowUpdateForm(dossier)" [ngbTooltip]="'Modifier'" tooltipClass="my-tooltip-class">
-                              <i class="fal fa-edit" size="lg" style="color: #99600b "></i>
-                          </button>
-                                    <button class="btn p-0 mx-2" (click)="onShowCreateForm(dossier)" [ngbTooltip]="'Créer comme'" tooltipClass="my-tooltip-class">
-                              <i class="fal fa-copy" size="lg" style="color: #99600b "></i>
-                          </button>
-                                    <button class="btn p-0 mx-2" (click)="onDelete(dossier)" [ngbTooltip]="'Supprimer'" tooltipClass="my-tooltip-class">
-                              <i class="fal fa-times-square" size="lg" style="color: #99600b "></i>
-                          </button>
-                                </p>
+                                        <h3 class="card-title mb-0">{{dossier.conducteur.libelle | titlecase}}
+                                        </h3>
+                                        <p class="text-center mb-0">
+                                            <button class="btn  p-0 mx-2" (click)="onSelectDossier(dossier)" [ngbTooltip]="'Details'" tooltipClass="my-tooltip-class">
+                                                <i class="fal fa-search" size="lg" style="color: #99600b "></i>
+                                            </button>
+                                            <button class="btn p-0 mx-2" (click)="onShowUpdateForm(dossier)" [ngbTooltip]="'Modifier'" tooltipClass="my-tooltip-class">
+                                                <i class="fal fa-edit" size="lg" style="color: #99600b "></i>
+                                            </button>
+                                            <button class="btn p-0 mx-2" (click)="onShowCreateForm(dossier)" [ngbTooltip]="'Créer comme'" tooltipClass="my-tooltip-class">
+                                                <i class="fal fa-copy" size="lg" style="color: #99600b "></i>
+                                            </button>
+                                            <button class="btn p-0 mx-2" (click)="onDelete(dossier)" [ngbTooltip]="'Supprimer'" tooltipClass="my-tooltip-class">
+                                                <i class="fal fa-times-square" size="lg" style="color: #99600b "></i>
+                                            </button>
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
+                            <section *ngIf="dataHelper.hasMoreData" [fromRoot]="true" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="dataHelper.loadData()">
+                            </section>
                         </div>
-                    </div>
-                    <section *ngIf="dataHelper.hasMoreData" [fromRoot]="true" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="dataHelper.loadData()">
-                    </section>
-                </ng-container>
+                    </ng-container>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="main-content2 scroll-11 " [class.main-content_large]="selectedDossier">
+          <div class="card shadow mb-2 p-0"  *ngIf="selectedDossier">
+            <!-- Card Header - Dropdown -->
+            <div class="card-header py-2 d-flex align-items-center text-center">
+                <button class="btn btn-link  mr-3" [routerLink]="['./']">
+                    <i class="fad fa-arrow-alt-left bg-light tx-success card-1"
+                        style="padding:6px; border-radius:50%"></i>
+                </button>
+              <h6 class="m-0 font-weight-bold text-secondary text-center">
+                {{selectedDossier.conducteur.nom+' '+selectedDossier.conducteur.prenom}}
+              </h6>
+            </div>
+            <!-- Card Body -->
+            <div class="card-body">
+              <div class="row mt-1">
 
+                <div class="col-md-3 details animated slideInLeft">
+                  <ul class="list-group shadow">
+                    <li
+                      class="list-group-item d-flex justify-content-between align-items-center pt-1 pb-1 bgTheme text-white">
+                      {{'INFORMATIONS' | translate}}
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Nom: {{selectedDossier.conducteur.nom+' '+selectedDossier.conducteur.prenom}}
+                      <span class="float-right fas fa-fw fa-user"></span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Sexe: {{selectedDossier.conducteur.sexe}}
+                        <span class="float-right fas fa-fw fa-user-circle"></span>
+                      </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Adresse: {{selectedDossier.conducteur.adresse}}
+                      <span class="float-right fas fa-fw fa-map"></span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Adresse: {{selectedDossier.conducteur.situation_matrimoniale}}
+                        <span class="float-right fas fa-fw fa-users"></span>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="col-md-9 pl-1">
+                    <ngb-tabset [justify]="'fill'" #tabs="ngbTabset" [destroyOnHide]="false">
+                        <ngb-tab id="tab-description">
+                            <ng-template ngbTabTitle>
+                                <i class="fal fa-list-alt"></i> Dossier Conducteur
+                            </ng-template>
+                            <ng-template ngbTabContent>
+                                <div class="d-flex justify-content-center">
+                                    <button (click)="onShowUpdateForm(selectedDossier)" class="btn btn-light m-2 tx-13"> <i class="fal fa-edit" style="color:   #99600b    "></i> Modifier</button>
+                                </div>
+                                <section class="py-2 col-md-11  d-block mx-auto">
+                                    <ul class="row pl-0 mb-0">
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Numero du permis: </span> {{selectedDossier.numero_permis | titlecase}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Type de permis: </span>
+                                                <b *ngFor="let typepermis of selectedDossier.type_permis;  let last = last">
+                                                    {{typepermis.libelle | titlecase}} {{last ? '' : ','}}
+                                                </b>
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">lieu d'obtention du permis: </span> {{selectedDossier.lieu_obtention_permis?.libelle | titlecase}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">date d'obtention du permis: </span> {{selectedDossier.date_obtention | date: 'dd/MM/yyyy'}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Fumeur: </span> {{selectedDossier.etes_vous_fumeur | titlecase}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold" *ngIf="selectedDossier.etes_vous_fumeur == arreter">
+                                            <p class="formSep m-0"><span class="text-muted">Depuis quand j'ai arretez de fumer: </span> {{selectedDossier.depuis_quand_avez_vous_arrete_fumer}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Alcool: </span> {{selectedDossier.prenez_vous_lalcool | titlecase}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold" *ngIf="selectedDossier.prenez_vous_lalcool == arreter">
+                                            <p class="formSep m-0"><span class="text-muted">Depuis quand j'ai arretez l'alcool: </span> {{selectedDossier.depuis_quand_avez_vous_arrete_alcool}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item invoice_preview p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Problème d'audition: </span> {{selectedDossier.avez_vous_difficulter_entendre | titlecase}}
+                                            </p>
+                                            <p class="inv_notes mx-3" *ngIf="selectedDossier.avez_vous_difficulter_entendre == 'Oui'"><span class="badge badge-info">description du problème</span> {{selectedDossier.quel_difficulte}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold" *ngIf="selectedDossier.avez_vous_difficulter_entendre == 'Oui'">
+                                            <p class="formSep m-0"><span class="text-muted">Combien d'oreilles: </span> {{selectedDossier.combien_doreille}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item invoice_preview p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Problème de vue: </span> {{selectedDossier.avez_vous_des_difficultes_voir | titlecase}}
+                                            </p>
+                                            <p class="inv_notes mx-3" *ngIf="selectedDossier.avez_vous_des_difficultes_voir == 'Oui'"><span class="badge badge-info">description du problème</span> {{selectedDossier.laquel}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold" *ngIf="selectedDossier.avez_vous_des_difficultes_voir == 'Oui'">
+                                            <p class="formSep m-0"><span class="text-muted">Correcteur pour la vue: </span> {{selectedDossier.utilisez_vous_des_correcteurs}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item invoice_preview p-0 border-0 col-md-6 col-12 font-weight-bold" *ngIf="selectedDossier.avez_vous_des_difficultes_voir == 'Oui'">
+                                            <p class="formSep m-0"><span class="text-muted">Spécialiste pour la vue consulté: </span> {{selectedDossier.avez_vous_consulte_un_specialiste}}
+                                            </p>
+                                            <p class="inv_notes mx-3" *ngIf="selectedDossier.avez_vous_consulte_un_specialiste == 'Oui'"><span class="badge badge-info">la consultation remonte à</span> {{selectedDossier.a_quand_remonte_votre_consultation}}
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Depuis quand je conduis: </span> {{selectedDossier.depuis_combien_de_temps_conduisez_vous_annee }} ans
+                                            </p>
+                                        </li>
+                                        <li class="list-group-item invoice_preview p-0 border-0 col-md-6 col-12 font-weight-bold">
+                                            <p class="formSep m-0"><span class="text-muted">Ai-je exercez autre part?: </span> {{selectedDossier.avez_vous_exercez_autre_part}}
+                                            </p>
+                                            <p class="inv_notes mx-3" *ngIf="selectedDossier.avez_vous_exercez_autre_part == 'Oui'"><span class="badge badge-info">reference</span> {{selectedDossier.reference}}
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </ng-template>
+                        </ngb-tab>
+                        <ngb-tab id="tab-objectifs">
+                            <ng-template ngbTabTitle>
+                                <i class="fal fa-file-certificate"></i> Permis
+                            </ng-template>
+                            <ng-template ngbTabContent>
+                                <div class="p-3">
+                                </div>
+                            </ng-template>
+                        </ngb-tab>
+                        <ngb-tab id="tab-objectifs">
+                            <ng-template ngbTabTitle>
+                                <i class="fal fa-file-medical"></i> Dossier Medical
+                            </ng-template>
+                            <ng-template ngbTabContent>
+                                <div class="p-3">
+                                </div>
+                            </ng-template>
+                        </ngb-tab>
+                        <ngb-tab id="tab-objectifs">
+                            <ng-template ngbTabTitle>
+                                <i class="fal fa-calendar"></i> Calendrier Auto
+                            </ng-template>
+                            <ng-template ngbTabContent>
+                                <div class="p-3">
+                                </div>
+                            </ng-template>
+                        </ngb-tab>
+                    </ngb-tabset>
+                </div>
+              </div>
+            </div>
+
+          </div>
+    </div>
+</div>
 
 <ng-template #noItem>
     <h5 class="text-center title m-2 p-5">
         {{ 'Aucun Element' }}
     </h5>
 </ng-template>
+
+<!-- ADD -->
+<div class="button-fixed-bottom-right">
+    <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" title="Créer"  type="button"
+      class="btn btn-primary btn-circle btn-lg">
+      <i class="fas fa-plus-circle"></i>
+    </button>
+    <!-- <button *ngIf="currentView == 'add'" title="Fermer"
+      (click)="addOrList(); setTitle('window', 'listMission'); removeItem()" type="button"
+      class="btn btn-danger btn-circle btn-lg">
+      <i class="fas fa-times"></i>
+    </button> -->
+</div>
