--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -23,8 +23,8 @@
           <!-- Page Heading -->
           <div class="row  mb-4">
             <h5 class="col-md-6 mb-0 text-gray-800">
-              <i class="fas fa-fw fa-car"></i>
-              <span>Transport</span>
+              <i class="fas fa-fw {{icon}}"></i>
+              <span> {{title}} </span>
             </h5>
   
             <div class="col-md-6">
