--- a/src/app/modules/fournisseur/coordonnee/edit/edit.component.html
+++ b/src/app/modules/fournisseur/coordonnee/edit/edit.component.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-10 col-sm-5 mb-3">
                     <label class="control-label" for="salle">Groupes</label>
-                    <app-coordonnee-groupe-select [small]="true" [formControlName]="'groupes_id'"></app-coordonnee-groupe-select>
+                    <app-coordonnee-groupe-select [small]="true" [formControlName]="'groupes'"></app-coordonnee-groupe-select>
                 </div>
             </div>
 
