--- a/src/app/modules/transport/automobile/configuration/configuration.component.html
+++ b/src/app/modules/transport/automobile/configuration/configuration.component.html
@@ -41,11 +41,11 @@
                     <i class="fal fa-cars tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Series</span>
                 </div>
             </a>
-            <a [class.active]="fragment == 'masque-itineraire'" routerLink="." [fragment]="'masque-itineraire'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
+            <!-- <a [class.active]="fragment == 'masque-itineraire'" routerLink="." [fragment]="'masque-itineraire'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
                     <i class="fal fa-map-signs tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Masques Itineraires</span>
                 </div>
-            </a>
+            </a> -->
         </nav>
     </div>
     <div class="col-12 col-sm-9 bg-light">
@@ -71,9 +71,9 @@
             <div *ngSwitchCase="'serie'">
                 <app-serie></app-serie>
             </div>
-            <div *ngSwitchCase="'masque-itineraire'">
+            <!-- <div *ngSwitchCase="'masque-itineraire'">
                 <app-masque-itineraire></app-masque-itineraire>
-            </div>
+            </div> -->
             <div *ngSwitchDefault>
                 <app-automobile-type></app-automobile-type>
             </div>
