--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -34,13 +34,22 @@
             <div class="col-md-12">
               <div class="d-sm-flex align-items-center justify-content-start bg-white shadow-sm pt-2 pb-2 subMenu">
                 <a routerLink="/transport/mes-autos" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
-                  <i class="fas fa-bus-school"></i> Automobiles
+                  <i class="fas fa-car"></i> Vehicules
                 </a>
-                <a routerLink="/transport/mes-itineraires" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                <!-- <a routerLink="/transport/mes-itineraires" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-route"></i> Itineraires
-                </a>
+                </a> -->
                 <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-user-tie"></i> Conducteurs
+                </a>
+                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-user-tie"></i> Assurance
+                </a>
+                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-user-tie"></i> Visite Technique
+                </a>
+                <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-user-tie"></i> cartes rapido
                 </a>
                 <a routerLink="/transport/configuration" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-wrench"></i> Configuration
