--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -46,7 +46,7 @@ body {
 }
 
 /* FULL CALENDAR CSS BEGIN */
-.fc-button-primary:not(:disabled):active,
+/* .fc-button-primary:not(:disabled):active,
 .fc-button-primary:not(:disabled).fc-button-active {
   color: #fff !important;
   background-color: #4e73df !important;
@@ -65,11 +65,11 @@ body {
 }
 
 .fc-event {
-  /* font-size: 100% !important; */
+  font-size: 100% !important; 
   line-height: 2 !important;
   font-weight: bolder !important;
   border-radius: 0px !important;
-}
+} */
 
 /* FULL CALENDAR CSS END */
 
