--- a/src/assets/css/vision.css
+++ b/src/assets/css/vision.css
@@ -1640,3 +1640,71 @@
     transform: translateX(100%);
   }
 }
+
+.js-app-droppable--target,
+.js-app-droppable--zone {
+  border-width: 2px;
+  border-style: dashed;
+}
+
+.file-drop-area {
+  border: 1px dashed #7c7db3;
+  border-radius: 3px;
+  position: relative;
+  width: 450px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 26px 20px 30px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.file-drop-area.is-active {
+  background-color: #2471a3;
+}
+
+.fake-btn {
+  background-color: #2471a3;
+  border: 1px solid #b8e2ff;
+  color: white;
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 8px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.file-msg {
+  font-size: small;
+  font-weight: 300;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  max-width: calc(100% - 130px);
+  vertical-align: middle;
+}
+
+.file-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.file-input:focus {
+  outline: none;
+}
+
+.js-app-droppable--target {
+  border-color: #b6faff;
+  background-color: #f0feff;
+}
+
+.js-app-droppable--zone {
+  border-color: #85ca7f;
+  background-color: #ebffe8;
+}
